# apply_task-mcp

./: .apply_task_projects.yaml  .apply_taskrc.yaml  .gitignore  AGENTS.md  AI.md  AI_INTENTS.md  AUDIT_SUMMARY_RU.md  CHANGES.md  CODE_REVIEW.md  DOMAIN_STRUCTURE.md  GIT_PROJECT.md  LEGACY_HOTSPOTS.md  LICENSE  Makefile  README.md  SCROLLING.md  SHIP_LOG_CLI_AI_AUDIT.md  SUBTASKS_VISIBILITY_FIX.md  SYNTAX.md  UI_UX_IMPROVEMENTS.md  apply_task  apply_task.py  apply_task_projects.example.yaml  config.py  dummy.yaml  projects_sync.py  reproduce_ipc.py  reproduce_issue.py  requirements.txt  setup.cfg  tasks.py  test_responsive.py  todo.machine.md
application/: ports.py  sync_service.py
core/: __init__.py  dependency_validator.py  evidence.py  status.py  step.py  subtask.py  task_detail.py  task_event.py
gui/: DEBUG_FIXES.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs  main.rs
gui/src-tauri/src/commands/: mod.rs  task.rs
gui/src-tauri/src/python/: bridge.rs  mod.rs  protocol.rs
infrastructure/: file_repository.py  projects_sync_service.py  task_file_parser.py  token_status_cache.py
tests/: test_application_helpers.py  test_apply_cli.py  test_apply_task_wrapper.py  test_apply_wrapper_batch.py  test_auto_sync.py  test_auto_sync_integration.py  test_automation_cli.py  test_cli_activity_unit.py  test_cli_ai_unit.py  test_cli_automation_unit.py  test_cli_batch_ops.py  test_cli_checkpoint_unit.py  test_cli_checkpoint_validate_only.py  test_cli_commands.py  test_cli_commands_more.py  test_cli_create_more.py  test_cli_create_unit.py  test_cli_edit_unit.py  test_cli_guided_unit.py  test_cli_history_unit.py  test_cli_interactive_unit.py  test_cli_macros_extended.py  (+84 more)
(+112 files in other folders)
