[metadata]
name = apply-task
version = 0.1.0
description = Flagship AI-first task tracker (CLI/TUI/MCP)
author = Apply Task Team
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers

[options]
packages = find:
package_dir =
    = .
py_modules =
    apply_task
    tasks
    projects_sync
    config
include_package_data = True
python_requires = >=3.10
install_requires =
    textual>=0.47.0
    rich>=13.7.0
    pyyaml>=6.0
    requests>=2.31.0
    prompt_toolkit>=3.0.39
    wcwidth>=0.2.6

[options.packages.find]
exclude =
    tests*
    *.tests

[options.entry_points]
console_scripts =
    apply_task = apply_task:main
    tasks = core.desktop.devtools.interface.tasks_app:main
