[package]
name = "apply-task-gui"
version = "0.1.0"
description = "Desktop GUI for Apply Task - AI-first task management"
authors = ["Amir Tlinov"]
edition = "2021"
license = "MIT"

[lib]
name = "apply_task_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["process", "io-util", "sync", "rt-multi-thread", "macros"] }

# File watching
notify = "7"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"
anyhow = "1"

